--- a/package.json
+++ b/package.json
@@ -16,12 +16,10 @@
     "autoprefixer": "^9.4.3",
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^1.0.0",
-    "css-loader": "^2.1.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
-    "postcss-loader": "^3.0.0",
     "prettier": "^1.15.3",
-    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "ts-list": "^1.0.5",
     "ts-loader": "^5.3.2",
@@ -33,6 +31,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   }
