--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "start": "webpack-dev-server --open --hot --inline --watch-content-base",
+    "lint": "eslint src/**/*.tsx",
     "build": "NODE_ENV=production webpack --progress --hide-modules"
   },
   "devDependencies": {
@@ -13,18 +14,21 @@
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
+    "@typescript-eslint/eslint-plugin": "^1.4.0",
     "autoprefixer": "^9.4.3",
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.1.0",
+    "eslint": "^5.14.1",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "prettier": "^1.15.3",
     "style-loader": "^0.23.1",
-    "ts-list": "^1.0.5",
     "ts-loader": "^5.3.2",
-    "tslint-config-prettier": "^1.17.0",
     "typescript": "^3.2.2",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "webpack": "^4.28.3",
