--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "start": "webpack-dev-server --open --hot --inline --watch-content-base",
-    "lint": "eslint src/**/*.tsx",
+    "lint": "eslint src/*.tsx src/**/*.tsx",
     "build": "NODE_ENV=production webpack --progress --hide-modules"
   },
   "devDependencies": {
