--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
     "@typescript-eslint/eslint-plugin": "^1.4.0",
+    "@typescript-eslint/parser": "^1.4.2",
     "autoprefixer": "^9.4.3",
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^1.0.0",
